--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/svelte",
   "compilerOptions": {
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "types": ["node", "svelte"]
   }
 }
