--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "rollup -c",
+    "start": "rollup -c -w"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "14.0.0",
     "@rollup/plugin-html": "0.2.0",
     "@rollup/plugin-node-resolve": "8.4.0",
+    "@rollup/plugin-replace": "2.3.3",
     "@rollup/plugin-typescript": "5.0.2",
     "@tsconfig/svelte": "1.0.4",
+    "@types/node": "14.0.27",
+    "dotenv": "8.2.0",
+    "husky": "4.2.5",
+    "node-sass": "4.14.1",
+    "prettier": "2.0.5",
+    "prettier-plugin-svelte": "1.1.0",
+    "pretty-quick": "2.0.1",
     "rollup": "^2.23.0",
     "rollup-plugin-serve": "1.0.3",
     "rollup-plugin-svelte": "5.2.3",
@@ -21,6 +37,8 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "svelte": "^3.24.0"
+    "@auth0/auth0-spa-js": "1.11.0",
+    "svelte": "^3.24.0",
+    "svelte-routing": "1.4.2"
   }
 }
