--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@tsconfig/svelte": "1.0.4",
     "@types/node": "14.0.27",
     "husky": "4.2.5",
-    "node-sass": "4.14.1",
+    "postcss-nested": "4.2.3",
     "prettier": "2.0.5",
     "prettier-plugin-svelte": "1.1.0",
     "pretty-quick": "2.0.1",
     "rollup": "^2.23.0",
+    "rollup-plugin-postcss": "3.1.4",
     "rollup-plugin-serve": "1.0.3",
     "rollup-plugin-svelte": "5.2.3",
     "svelte-preprocess": "4.0.9",
