check by svelte-check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "@tsconfig/svelte",
   "compilerOptions": {
     "lib": ["es6", "dom"],
-    "types": ["node", "svelte"]
+    "types": ["node", "svelte"],
+    "baseUrl": "src/typings/",
+    "paths": {
+      "svelte-routing": ["svelte-routing/index.d.ts"]
+    }
   }
 }
