--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tsconfig/svelte": "1.0.4",
     "@types/node": "14.0.27",
     "husky": "4.2.5",
+    "node-sass": "4.14.1",
     "postcss-nested": "4.2.3",
     "prettier": "2.0.5",
     "prettier-plugin-svelte": "1.1.0",
@@ -31,6 +32,7 @@
     "rollup-plugin-postcss": "3.1.4",
     "rollup-plugin-serve": "1.0.3",
     "rollup-plugin-svelte": "5.2.3",
+    "svelte-check": "1.0.10",
     "svelte-preprocess": "4.0.9",
     "tslib": "2.0.0",
     "typescript": "^3.9.7"
