--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint -c .eslintrc.js --ext .js,.ts,.svelte",
+    "lint:fix": "eslint -c .eslintrc.js --ext .js,.ts,.svelte --fix",
     "build": "rollup -c",
     "start": "rollup -c -w"
   },
@@ -22,6 +24,12 @@
     "@rollup/plugin-typescript": "5.0.2",
     "@tsconfig/svelte": "1.0.4",
     "@types/node": "14.0.27",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
+    "eslint": "7.6.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-svelte3": "2.7.3",
     "husky": "4.2.5",
     "node-sass": "4.14.1",
     "postcss-nested": "4.2.3",
